# maikyno_desktop

./: .gitignore  CMakeLists.txt  install.sh  maikyno.desktop  main.cpp  run.sh
player/: CMakeLists.txt  Main.qml  PlayerButton.qml  PlayerControls.qml
src/: CMakeLists.txt  Config.cpp  Config.h  main.cpp
src/network/: Server.cpp  Server.h
src/pages/: CMakeLists.txt  Main.qml  Pages.qml
src/pages/connect/: ConnectPage.qml
src/pages/libraries/: CreateLibraryPage.qml  LibrariesPage.qml  LibraryDirsPage.qml
src/pages/media_dir/: MediaDirPage.qml
src/pages/media_dirs/: MediaDirsPage.qml
src/pages/player/: PlayerPage.qml
src/pages/shows/: ShowsPage.qml
src/pages/videos/: ConfiguratorPage.qml  ProcessJobsPage.qml  VideosPage.qml
src/player/: CMakeLists.txt  Main.qml  MkpBackend.cpp  MkpBackend.h  MpvBackend.cpp  MpvBackend.h  Player.cpp  Player.h  PlayerBackend.h  PlayerRenderNode.h  mpv_utils.h
